--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 *:not(mat-icon) {
-  font-family: "Bodoni MT Poster Compressed", cursive;
+  font-family: "Signika Negative Light", monospace;
 }
 
 mat-icon {
