--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -16,7 +16,7 @@ div {
   height: 100vh;
   align-items: center;
   overflow: hidden;
-  font-family: 'Banchrift', sans-serif;
+  font-family: "Signika Negative Light", monospace;
   display: flex;
   flex-direction: column;
   justify-content: center;
