--- a/src/app/pages/products/products.component.scss
+++ b/src/app/pages/products/products.component.scss
@@ -1,13 +1,9 @@
-/* products.component.scss */
 * {
 
 }
 
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-
 mat-select {
-  font-family: "Bodoni MT Poster Compressed", cursive;
+  font-family: "Signika Negative Light", monospace;
   font-weight: bold;
 }
 
