--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -33,7 +33,7 @@ th {
   height: 100vh;
   align-items: center;
   overflow: hidden;
-  font-family: 'Banchrift', sans-serif;
+  font-family: "Signika Negative Light", monospace;
   display: flex;
   flex-direction: column;
   justify-content: center;
