--- a/src/app/pages/signup/signup.component.scss
+++ b/src/app/pages/signup/signup.component.scss
@@ -49,7 +49,7 @@ div {
   height: 100vh;
   align-items: center;
   overflow: hidden;
-  font-family: 'Banchrift', sans-serif;
+  font-family: "Signika Negative Light", monospace;
 }
 
 .card {
