--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -29,7 +29,7 @@
     </a>
     <a mat-list-item routerLink="/profile" (click)="close()" *ngIf="(loggedInUser)">
         <mat-icon>account_circle</mat-icon>
-        <span>Profile</span>
+        <span>Profil</span>
     </a>
     <a mat-list-item routerLink="/login" (click)="close(true)" *ngIf="(loggedInUser)">
         <mat-icon>logout</mat-icon>
