--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -53,7 +53,7 @@ th {
 .card {
   margin-bottom: 5vh;
   width: 50%;
-  height: 75%;
+  height: auto;
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 8px;
