--- a/src/app/pages/basket/basket.component.html
+++ b/src/app/pages/basket/basket.component.html
@@ -25,8 +25,9 @@
                     <button color="primary" mat-raised-button (click)="openTransactionDialog()">Fizetés</button>
                 </div>
                 <br><button color="accent" mat-raised-button [routerLink]="['/products']">További termékek hozzáadása</button>
-                <br><button color="accent" mat-raised-button [routerLink]="['/coupons']">Másik kupon hozzáadása</button>
-                <br><button color="accent" mat-raised-button (click)="removeCoupon()">Kupon eltávolítása</button>
+              <br><button color="accent" mat-raised-button [routerLink]="['/coupons']">Másik kupon hozzáadása</button>
+              <br><button color="accent" mat-raised-button (click)="removeCoupon()">Kupon eltávolítása</button>
+              <br><button color="accent" mat-raised-button (click)="emptyBasket()">Kosár ürítése</button>
             </div>
         </mat-card-content>
     </mat-card>
