--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -12,7 +12,10 @@ mat-icon {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  height: 80%;
+  height: auto;
+}
+.icos{
+  padding: 1vh;
 }
 
 .main_component {
@@ -73,4 +76,8 @@ a:hover {
 p {
   font-size: 1.75vh;
   text-align: left;
+}
+.socialMedia{
+  margin-bottom: 0;
+    text-align: center;
 }
