javitas, profil tranzakcio rendes listazas

--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -30,7 +30,7 @@ th {
 }
 
 .main_component {
-  height: 100vh;
+  height: auto;
   align-items: center;
   overflow: hidden;
   font-family: "Signika Negative Light", monospace;
