--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -37,10 +37,10 @@
 
           <div>
             <h2 class="socialMedia">Kövess minket közösségi média oldalainkon!</h2>
-            <a href="https://www.youtube.com/watch?v=wPs77cysK_4" target="_blank"><img  class="icos" src="../../../assets/facebook-contact.ico" alt=""></a>
-            <a href="https://www.youtube.com/watch?v=QwLvrnlfdNo" target="_blank"><img class="icos" src="../../../assets/tiktok-contact.ico" alt=""></a>
-            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" target="_blank"><img class="icos" src="../../../assets/youtube-contact.ico" alt=""></a>
-            <a href="https://youtu.be/D9OxhdQnmBM?si=eG0cmkPiMJGyHkBF&t=33" target="_blank"><img class="icos" src="../../../assets/instagram-contact.ico" alt=""></a>
+            <a title="Plusz pont ugyebár" href="https://www.youtube.com/watch?v=wPs77cysK_4" target="_blank"><img  class="icos" src="../../../assets/facebook-contact.ico" alt=""></a>
+            <a title="Plusz pont ugyebár" href="https://www.youtube.com/watch?v=QwLvrnlfdNo" target="_blank"><img class="icos" src="../../../assets/tiktok-contact.ico" alt=""></a>
+            <a title="Plusz pont ugyebár" href="https://www.youtube.com/watch?v=xvFZjo5PgG0" target="_blank"><img class="icos" src="../../../assets/youtube-contact.ico" alt=""></a>
+            <a title="Plusz pont ugyebár" href="https://youtu.be/D9OxhdQnmBM?si=eG0cmkPiMJGyHkBF&t=33" target="_blank"><img class="icos" src="../../../assets/instagram-contact.ico" alt=""></a>
           </div>
 
         </mat-card-content>
