--- a/src/app/shared/pop-ups/pop-up-transaction/pop-up-transaction.component.html
+++ b/src/app/shared/pop-ups/pop-up-transaction/pop-up-transaction.component.html
@@ -5,18 +5,18 @@
     <mat-dialog-content>
       <mat-form-field>
         <mat-label>Email</mat-label>
-        <input matInput type="text" formControlName="email" value="{{loggedInUser?.email}}" required>
+        <input matInput type="text" formControlName="email" value="{{loggedInUser?.email}}">
       </mat-form-field>
 
       <mat-form-field>
         <mat-label>Név</mat-label>
-        <input matInput type="text" formControlName="name" value="{{ loggedInUser | nameFormat }}" required>
+        <input matInput type="text" formControlName="name" value="{{ loggedInUser | nameFormat }}">
       </mat-form-field>
 
       <br>
       <mat-form-field>
         <mat-label>Fizetési mód</mat-label>
-        <mat-select id="paymentMethod" formControlName="paymentMethod" required>
+        <mat-select id="paymentMethod" formControlName="paymentMethod">
           <mat-option value="card">Bankkártya</mat-option>
           <mat-option value="cash">Utánvét</mat-option>
         </mat-select>
@@ -25,7 +25,7 @@
       <br>
       <mat-form-field>
         <mat-label>Lakcím</mat-label>
-        <input matInput type="text" formControlName="address" required>
+        <input matInput type="text" formControlName="address">
       </mat-form-field>
       <br>
 
