Pop up javitas DE REEDUNDAAAS

--- a/src/app/shared/pop-ups/pop-up-error-registration/pop-up-error-registration.component.html
+++ b/src/app/shared/pop-ups/pop-up-error-registration/pop-up-error-registration.component.html
@@ -1,6 +1,6 @@
 
 <div *ngIf="message">
-  <h2 mat-dialog-title>Sikertelen regisztráció!</h2>
+  <h2 mat-dialog-title>{{title}}</h2>
   <mat-dialog-content>
     <mat-label>{{message}}</mat-label>
   </mat-dialog-content>
