betutipus valtas signikarol sans-serif-re

--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -39,13 +39,13 @@ mat-icon {
 
 
 h1 {
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-weight: bold;
   font-size: 5vh;
 }
 
 h3 {
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-size: 2vh;
   text-align: left;
   font-weight: bold;
@@ -57,7 +57,7 @@ h3 {
 }
 
 a {
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-weight: bold;
   text-decoration: none;
   color: #41B06E;
