--- a/src/app/pages/coupons/coupons.component.scss
+++ b/src/app/pages/coupons/coupons.component.scss
@@ -98,13 +98,13 @@ mat-icon {
 
 
 h1 {
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-weight: bold;
   font-size: 5vh;
 }
 
 h3 {
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-size: 2vh;
   text-align: left;
   font-weight: bold;
@@ -119,7 +119,7 @@ h3 {
 
 a {
   display: flow;
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-weight: bold;
   text-decoration: none;
   color: black;
