--- a/src/app/pages/delivery/delivery.component.scss
+++ b/src/app/pages/delivery/delivery.component.scss
@@ -8,13 +8,13 @@ div {
 }
 
 h1 {
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-weight: bold;
   font-size: 5vh;
 }
 
 h3 {
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-size: 2vh;
   text-align: left;
   font-weight: bold;
@@ -53,7 +53,7 @@ mat-icon {
 }
 
 a {
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-weight: bold;
   text-decoration: none;
   color: #41B06E;
