--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -8,7 +8,7 @@ div {
 }
 
 .main_component * {
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-weight: bold;
 }
 
@@ -16,7 +16,7 @@ div {
   height: 100vh;
   align-items: center;
   overflow: hidden;
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: center;
