--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -8,12 +8,12 @@ div {
 }
 
 h1 {
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-weight: bold;
 }
 
 h3 {
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-size: 2vh;
 }
 
@@ -28,7 +28,7 @@ mat-icon {
 
 a {
   display: flow;
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-weight: bold;
   text-decoration: none;
   color: #41B06E;
