--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -1,6 +1,6 @@
 
 a {
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-weight: bold;
   text-decoration: none;
   color: #41B06E;
@@ -33,7 +33,7 @@ th {
   height: auto;
   align-items: center;
   overflow: hidden;
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -46,7 +46,7 @@ th {
 }
 
 .main_component * {
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-weight: bold;
 }
 
