--- a/src/app/pages/signup/signup.component.scss
+++ b/src/app/pages/signup/signup.component.scss
@@ -41,7 +41,7 @@ div {
 }
 
 .main_component * {
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-weight: bold;
 }
 
@@ -49,7 +49,7 @@ div {
   height: 100vh;
   align-items: center;
   overflow: hidden;
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
 }
 
 .card {
