--- a/src/app/pages/basket/basket.component.scss
+++ b/src/app/pages/basket/basket.component.scss
@@ -70,13 +70,13 @@ mat-icon {
 
 
 h1 {
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-weight: bold;
   font-size: 5vh;
 }
 
 h3 {
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-size: 2vh;
   text-align: left;
   font-weight: bold;
@@ -89,7 +89,7 @@ h3 {
 
 a {
   display: flow;
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-weight: bold;
   text-decoration: none;
   color: #41B06E;
