--- a/src/app/pages/products/products.component.scss
+++ b/src/app/pages/products/products.component.scss
@@ -3,7 +3,7 @@
 }
 
 mat-select {
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-weight: bold;
 }
 
@@ -79,7 +79,7 @@ mat-card-content img {
 .price {
   margin-top: 10px;
   font-size: 2vh;
-  font-family: "Signika Negative Light", monospace;
+  font-family: "sans-serif", sans-serif;
   font-weight: bold;
 }
 
