--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -25,7 +25,7 @@
     </a>
     <a mat-list-item routerLink="/login" (click)="close()" *ngIf="!(loggedInUser)">
         <mat-icon>login</mat-icon>
-        <span>Login</span>
+        <span>Bejelentkezés</span>
     </a>
     <a mat-list-item routerLink="/profile" (click)="close()" *ngIf="(loggedInUser)">
         <mat-icon>account_circle</mat-icon>
@@ -33,6 +33,6 @@
     </a>
     <a mat-list-item routerLink="/login" (click)="close(true)" *ngIf="(loggedInUser)">
         <mat-icon>logout</mat-icon>
-        <span>Logout</span>
+        <span>Kijelentkezés</span>
     </a>
 </mat-nav-list>
